<resources>
    <string name="app_name">ScanMonsters</string>
    <string name="title_activity_main">Scan Monsters</string>

    <string name="title_activity_splash__screen">Splash_Screen</string>
    <string name="splash_screen_text">Scan Monsters</string>

    <string name="inscription_button">S\'inscrire</string>
    <string name="connection_button">Se connecter</string>
    <string name="tesseract_button">Lancer tesseract</string>
    <string name="friends_button">Mes amis</string>
    <string name="title_activity_scan_monster">Scan Monsters</string>
    <string name="title_activity_inscription">Inscription</string>
    <string name="title_activity_connection">Connexion</string>
    <string name="hint_password">Mot de passe</string>
    <string name="action_signin">S\'inscrire</string>
    <string name="hint_login">Identifiant</string>
    <string name="error_invalid_password">Mot de passe incorrect !</string>
    <string name="error_invalid_login">Identifiant incorrect</string>
    <string name="error_field_required">Champ requis</string>
    <string name="error_login_taken">Cet identifiant est déjà utilisé !</string>
    <string name="action_signup">Se connecter</string>
    <string name="error_wrong_login_or_password">Erreur d\'Identifiant ou Mot de Passe</string>

    <string name="players_in_uqac">Joueurs dans l\'UQAC</string>
    <string name="leader_board">Leader board</string>

    <string name="warning">Attention !</string>
    <string name="confirm_logout">Es-tu certain de vouloir te déconnecter ?</string>
    <string name="cancel">Annuler</string>
    <string name="log_out">Se déconnecter</string>

    <string name="yes">Oui</string>
    <string name="no">Non</string>


    <string name="title_activity_tesseract">Tesseract</string>

    <string name="ac_tesseract_btn_By_Pass">Passer</string>
    <string name="ac_tesseract_btn_camera">Prendre une photo</string>
    <string name="ac_tesseract_btn_BOB">Bureau Bob</string>
    <string name="ac_tesseract_info_user">Aligner le rectangle et la plaque à scanner</string>

    <string name="title_activity_creatures_list">Créatures</string>
    <string name="title_activity_players_board">Informations</string>
    <string name="menu_logout">Se déconnecter</string>
    <string name="menu_informations">Informations</string>
    <string name="menu_friends">Mes amis</string>
    <string name="menu_notifications">Notifications</string>

    <string name="scan_monster_description">Tu es connecté (%s)</string>

    <string name="title_activity_mini_game">Capture la créature</string>
    <string name="title_capture_creature">Appuie sur le bouton pour frapper la créature</string>
    <string name="capture_button">Attaquer</string>


    <string name="title_activity_search_room">Prochain Objectif</string>
    <string name="search_room_description">Tu recherches la salle :</string>
    <string name="room_value_description">\??-????</string>
    <string name="arrive_at_room_button">Je suis devant la salle !</string>
    <string name="wait_room_info_description">Recherche de la prochaine salle en cours&#8230;</string>


    <string name="title_activity_friends_list">Mes amis</string>

    <string name="title_activity_search_friend">Rechercher des amis</string>
    <string name="hint_search">Pseudo&#8230;</string>
    <string name="wait_search_index_description">est ton nom d\'utilisateur</string>
    <string name="wait_search_info_description">Recherche en cours&#8230;</string>
    <string name="error_no_user_to_show">Personne ne porte ce pseudo</string>
    <string name="error_invalid_search_login">Recherche impossible</string>
    <string name="action_search">Rechercher</string>


    <string name="title_activity_notifications">Notifications</string>
    <string name="wait_notifications_loading">Chargement des notifications&#8230;</string>
    <string name="creatures_list">Créatures</string>
    <string name="offer_creature">Offrir</string>
    <string name="location_notif_title">ScanMonster : Joueurs dans ta zone</string>
    <string name="location_notif_content">Il y a %d joueurs dans ta zone !</string>
    <string name="menu_creatures">Mes créatures</string>


    <string name="gcm_notif_title">ScanMonster :</string>
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>

    <string name="title_activity_locate_google_map">Localiser les joueurs</string>


    <string name="title_activity_neary_devices">Joueurs à proximité</string>
    <string name="wait_search_nearby_description_2">Pour ajouter un ami, demandez-lui d\'activer la
        recherche à proximité.</string>
    <string name="information_button">Informations</string>
    <string name="creatures_button">Mes créatures</string>
    <string name="game_button">Jouer</string>
    <string name="friends_search_button">Rechercher des amis</string>
    <string name="friends_reload_button">Recharger</string>
    <string name="location_hide_button">Cacher</string>
    <string name="location_reload_button">Recharger</string>
    <string name="location_share_button">Partager</string>
    <string name="notifications_received_button">Reçues</string>
    <string name="notifications_sent_button">Envoyées</string>
    <string name="notifications_reload_button">Recharger</string>
    <string name="search_friend_locate_button">Localiser</string>
    <string name="search_friend_prox_button">A proximité</string>
    <string name="search_friend_ok_button">OK</string>
    <string name="leaderboard_pseudo_text">Pseudo</string>
    <string name="leaderboard_score_text">Score</string>

</resources>
