<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context=".activities.ScanMonsterActivity">

    <item android:id="@+id/menu_infos"
        android:title="@string/menu_informations"
        android:showAsAction="never"/>

    <item android:id="@+id/menu_friends"
        android:title="@string/menu_friends"
        android:showAsAction="never"/>

    <item android:id="@+id/menu_creatures"
        android:title="@string/menu_creatures"
        android:showAsAction="never"/>

    <item android:id="@+id/menu_notifications"
        android:title="@string/menu_notifications"
        android:showAsAction="never"/>

    <item android:id="@+id/menu_logout"
        android:title="@string/menu_logout"
        app:showAsAction="never"/>

</menu>
