<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="prog_mobile.uqac.com.scanmonsters.activities.C">

    <prog_mobile.uqac.com.scanmonsters.image_processing.CameraBackground
        android:id="@+id/Camera"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />
    <prog_mobile.uqac.com.scanmonsters.image_processing.RectangleView
       android:id="@+id/ROIrectangle"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/ac_tesseract_info_user"
        android:textColor="@color/icons"
        android:id="@+id/textView" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ac_tesseract_btn_camera"
            android:id="@+id/bt_takePhoto"
            android:background="@color/accent"
            android:textColor="@color/icons"
            android:onClick="takePhoto"
            android:layout_marginBottom="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ac_tesseract_btn_By_Pass"
            android:id="@+id/bt_byPass"
            android:background="@color/accent"
            android:textColor="@color/icons"
            android:onClick="byPass"
            android:layout_marginBottom="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ac_tesseract_btn_BOB"
            android:background="@color/accent"
            android:textColor="@color/icons"
            android:id="@+id/bt_bob"
            android:onClick="bob"/>
    </LinearLayout>
</RelativeLayout>
