<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="prog_mobile.uqac.com.scanmonsters.authentication.ConnectionActivity">

    <ProgressBar
        android:id="@+id/connection_login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleLarge"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:layout_centerInParent="true"/>

    <ScrollView
        android:id="@+id/connection_login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/email_connection_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/connection_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_login"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"/>

            <EditText
                android:id="@+id/connection_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:imeActionId="@+id/connection"
                android:imeActionLabel="@string/action_signup"
                android:imeOptions="actionUnspecified"
                android:layout_below="@id/connection_login"/>

            <Button
                android:id="@+id/signup_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/connection_password"
                android:layout_marginTop="50dp"
                android:background="@color/blue"
                android:text="@string/connection_button"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
