<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="prog_mobile.uqac.com.scanmonsters.authentication.SearchRoomActivity">

    <RelativeLayout
        android:id="@+id/wait_room_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/wait_room_info_description"
            android:text="@string/wait_room_info_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_marginBottom="10dp" />
    <ProgressBar
        android:id="@+id/wait_room_info_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleLarge"
        android:layout_below="@id/wait_room_info_description"
        android:layout_marginBottom="8dp"
        android:layout_centerInParent="true"/>
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/search_room_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

        <TextView
            android:id="@+id/search_room_description"
            android:text="@string/search_room_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/room_value_description"
            android:text="@string/room_value_description"
            android:layout_below="@id/search_room_description"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="50sp"
            android:layout_marginBottom="10dp" />

            <Button
                android:id="@+id/arrive_at_room_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/room_value_description"
                android:layout_marginTop="50dp"
                android:background="@color/accent"
                android:text="@string/arrive_at_room_button"
                android:textColor="@color/icons"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>
</RelativeLayout>
