<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="prog_mobile.uqac.com.scanmonsters.activities.LocateGoogleMapActivity">

    <RelativeLayout
        android:id="@+id/header_position_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/position_text"
            android:text="Ma position :"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/header_locate"
            android:layout_below="@id/position_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            >

            <Button
                android:id="@+id/btn_share_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/icons"
                android:background="@color/accent"
                android:text="@string/location_share_button"
                android:onClick="onClick"/>

            <Button
                android:id="@+id/btn_hide_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/icons"
                android:background="@color/accent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/location_hide_button"
                android:onClick="onClick"/>

            <Button
                android:id="@+id/btn_reload_others_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/icons"
                android:background="@color/accent"
                android:text="@string/location_reload_button"
                android:onClick="onClick"/>
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/map_layout"
        android:layout_below="@id/header_position_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:name="com.google.android.gms.maps.MapFragment"
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</RelativeLayout>

</RelativeLayout>
