<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="prog_mobile.uqac.com.scanmonsters.SearchFriendActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/search_friends_options"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            <Button
                android:id="@+id/btn_search_by_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Localiser"
                android:onClick="onClick"/>
            <Button
                android:id="@+id/btn_search_by_proximity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="A proximité"
                android:onClick="onClick"/>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/search_txt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_search"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:imeActionId="@+id/on_search"
                android:imeActionLabel="@string/action_search"
                android:imeOptions="actionUnspecified"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"/>

            <Button
                android:id="@+id/btn_search_ok"
                android:layout_alignRight="@id/search_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OK"
                android:onClick="onClick"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/wait_search_index"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/wait_search_index_login"
                android:text="login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/wait_search_index_description"
                android:text="@string/wait_search_index_description"
                android:layout_below="@+id/wait_search_index_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_marginBottom="10dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/wait_search_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">
            <TextView
                android:id="@+id/wait_search_info_description"
                android:text="@string/wait_search_info_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="30sp"
                android:layout_marginBottom="10dp" />
            <ProgressBar
                android:id="@+id/wait_search_info_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/progressBarStyleLarge"
                android:layout_below="@id/wait_search_info_description"
                android:layout_marginBottom="8dp"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/listGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            >

            <include layout="@layout/activity_friend_list_first_row_layout" />

            <ListView
                android:id="@+id/friendsList"
                android:layout_below="@id/firstRowListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
